docs: Update cells

--- a/neural_network/CNN.ipynb
+++ b/neural_network/CNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Conv1D, GlobalMaxPooling1D, Dense, Conv2D, Embedding, DepthwiseConv2D, SeparableConv2D\n",
+    "from tensorflow.keras.layers import Conv1D, GlobalMaxPooling1D, Dense, Conv2D, Embedding, DepthwiseConv2D, SeparableConv2D, Conv2DTranspose\n",
     "from tensorflow.keras.utils import to_categorical\n",
     "from tensorflow.keras.losses import BinaryCrossentropy\n",
     "from tensorflow.keras.initializers import GlorotNormal, GlorotUniform, Zeros\n",
@@ -416,13 +416,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_samples = 256\n",
+    "num_samples = 64\n",
     "image_size = (256, 256)\n",
-    "num_channels = 3\n",
+    "num_channels = 7\n",
     "\n",
     "kernel_size = (3, 3)\n",
     "strides = 2\n",
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,16 +450,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TensorShape([256, 256, 256, 3])"
+       "TensorShape([64, 256, 256, 7])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,14 +477,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time: 19.17914390563965\n"
+      "running time: 0.1440117359161377\n"
      ]
     }
    ],
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -512,11 +512,11 @@
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_4 (Conv2D)           (None, 127, 127, 64)      1792      \n",
+      " conv2d_3 (Conv2D)           (None, 127, 127, 64)      4096      \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 1,792\n",
-      "Trainable params: 1,792\n",
+      "Total params: 4,096\n",
+      "Trainable params: 4,096\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,14 +537,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([3, 3, 7, 64])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cnn.kernel.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# of params: 1792\n"
+      "# of params: 4096\n"
      ]
     },
     {
@@ -553,7 +573,7 @@
        "True"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +601,7 @@
        "True"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,14 +613,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time: 8.548577785491943\n"
+      "running time: 0.2839932441711426\n"
      ]
     }
    ],
@@ -618,22 +638,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TensorShape([1000, 127, 127, 27])"
+       "(TensorShape([64, 127, 127, 63]),\n",
+       " TensorShape([63, 64]),\n",
+       " TensorShape([64, 127, 127, 64]))"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ep.shape"
+    "ep.shape, kf.shape, result.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.alltrue(result == X_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "running time: 11.679848432540894\n"
+     ]
+    }
+   ],
+   "source": [
+    "st = time.time()\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(Conv2DTranspose(n_filters, kernel_size, input_shape = image_size+(num_channels,), strides = strides, padding='valid' ) )\n",
+    "X_ = model(X)\n",
+    "\n",
+    "et = time.time()\n",
+    "print('running time:', et-st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = strides - 1\n",
+    "X_t = tf.zeros( (num_samples, image_size[0] + (image_size[0]-1)*z , image_size[1] + (image_size[1]-1)*z ,num_channels) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([64, 256, 256, 7])"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_t[:, ::strides, ::strides, :].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([64, 256, 256, 7])"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([64, 511, 511, 7])"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_t.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([64, 513, 513, 64])"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_8\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d_transpose (Conv2DTra  (None, 513, 513, 64)     4096      \n",
+      " nspose)                                                         \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 4,096\n",
+      "Trainable params: 4,096\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnn_t = model.layers[0]"
    ]
   },
   {
@@ -644,7 +837,7 @@
     {
      "data": {
       "text/plain": [
-       "TensorShape([27, 64])"
+       "TensorShape([3, 3, 64, 7])"
       ]
      },
      "execution_count": 84,
@@ -653,27 +846,7 @@
     }
    ],
    "source": [
-    "kf.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.alltrue(result == X_)"
+    "cnn_t.kernel.shape"
    ]
   },
   {
@@ -697,14 +870,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time: 0.15592718124389648\n"
+      "running time: 0.060999393463134766\n"
      ]
     }
    ],
@@ -721,16 +894,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TensorShape([256, 127, 127, 3])"
+       "TensorShape([64, 127, 127, 7])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,23 +914,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_4\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " depthwise_conv2d (Depthwise  (None, 127, 127, 3)      30        \n",
-      " Conv2D)                                                         \n",
+      " depthwise_conv2d_2 (Depthwi  (None, 127, 127, 7)      70        \n",
+      " seConv2D)                                                       \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 30\n",
-      "Trainable params: 30\n",
+      "Total params: 70\n",
+      "Trainable params: 70\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -769,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,16 +951,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TensorShape([3, 3, 3, 1])"
+       "TensorShape([3, 3, 7, 1])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,14 +971,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time: 0.7058987617492676\n"
+      "running time: 0.4218616485595703\n"
      ]
     }
    ],
@@ -825,18 +998,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(TensorShape([256, 127, 127, 3, 3, 3]),\n",
-       " TensorShape([3, 3, 3]),\n",
-       " TensorShape([256, 127, 127, 3]))"
+       "(TensorShape([64, 127, 127, 3, 3, 7]),\n",
+       " TensorShape([3, 3, 7]),\n",
+       " TensorShape([64, 127, 127, 7]))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +1031,7 @@
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -896,23 +1069,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential_5\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " separable_conv2d (Separable  (None, 127, 127, 64)     283       \n",
+      " separable_conv2d (Separable  (None, 127, 127, 64)     575       \n",
       " Conv2D)                                                         \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 283\n",
-      "Trainable params: 283\n",
+      "Total params: 575\n",
+      "Trainable params: 575\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -924,16 +1097,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TensorShape([256, 127, 127, 3])"
+       "TensorShape([64, 127, 127, 7])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +1158,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1178,7 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1016,25 +1189,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_2\"\n",
+      "Model: \"sequential_6\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " depthwise_conv2d_1 (Depthwi  (None, 127, 127, 3)      27        \n",
+      " depthwise_conv2d_3 (Depthwi  (None, 127, 127, 7)      63        \n",
       " seConv2D)                                                       \n",
       "                                                                 \n",
-      " conv2d (Conv2D)             (None, 127, 127, 64)      256       \n",
+      " conv2d_2 (Conv2D)           (None, 127, 127, 64)      512       \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 283\n",
-      "Trainable params: 283\n",
+      "Total params: 575\n",
+      "Trainable params: 575\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -1046,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1228,7 @@
        "True"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
