feat: Add code for valid and same padding

--- a/neural_network/CNN.ipynb
+++ b/neural_network/CNN.ipynb
@@ -20,7 +20,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Conv1D, GlobalMaxPooling1D, Dense, Conv2D, Embedding, DepthwiseConv2D, SeparableConv2D, Conv2DTranspose\n",
+    "from tensorflow.keras.layers import Conv1D, GlobalMaxPooling1D, Dense, Conv2D, Embedding, DepthwiseConv2D, SeparableConv2D, Conv2DTranspose, ZeroPadding2D\n",
     "from tensorflow.keras.utils import to_categorical\n",
     "from tensorflow.keras.losses import BinaryCrossentropy\n",
     "from tensorflow.keras.initializers import GlorotNormal, GlorotUniform, Zeros\n",
@@ -416,13 +416,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_samples = 64\n",
+    "num_samples = 16\n",
     "image_size = (256, 256)\n",
-    "num_channels = 7\n",
+    "num_channels = 5\n",
     "\n",
     "kernel_size = (3, 3)\n",
     "strides = 2\n",
@@ -431,35 +431,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
     "rng = np.random.default_rng(42)\n",
-    "X = rng.integers(0, 256, size=(num_samples,)+image_size+(num_channels,))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "X = rng.integers(0, 256, size=(num_samples,)+image_size+(num_channels,))\n",
+    "\n",
     "X = tf.cast(X, tf.float32)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TensorShape([64, 256, 256, 7])"
+       "TensorShape([16, 256, 256, 5])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,14 +470,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time: 0.1440117359161377\n"
+      "running time: 0.06431174278259277\n"
      ]
     }
    ],
@@ -492,7 +485,7 @@
     "st = time.time()\n",
     "\n",
     "model = Sequential()\n",
-    "model.add(Conv2D(n_filters, kernel_size, input_shape = image_size+(num_channels,), strides = strides, padding='valid' ) )\n",
+    "model.add(Conv2D(n_filters, kernel_size, input_shape = image_size+(num_channels,), strides = strides, padding='valid', ) )\n",
     "X_ = model(X)\n",
     "\n",
     "et = time.time()\n",
@@ -501,22 +494,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_7\"\n",
+      "Model: \"sequential_22\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_3 (Conv2D)           (None, 127, 127, 64)      4096      \n",
+      " conv2d_9 (Conv2D)           (None, 127, 127, 64)      2944      \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 4,096\n",
-      "Trainable params: 4,096\n",
+      "Total params: 2,944\n",
+      "Trainable params: 2,944\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -528,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,16 +530,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TensorShape([3, 3, 7, 64])"
+       "TensorShape([3, 3, 5, 64])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,14 +550,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# of params: 4096\n"
+      "# of params: 2944\n"
      ]
     },
     {
@@ -573,7 +566,7 @@
        "True"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -601,34 +594,36 @@
        "True"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "pad = 2 if cnn.padding == 'same' else 0\n",
+    "\n",
     "print('shape of feature map:',cnn.output_shape[1:3])\n",
-    "cnn.output_shape[1:3] == (int((image_size[0] - kernel_size[0])/strides + 1), int((image_size[1] - kernel_size[1])/strides + 1))"
+    "cnn.output_shape[1:3] == (int((image_size[0] - kernel_size[0] + pad)/strides + 1), int((image_size[1] - kernel_size[1] + pad)/strides + 1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time: 0.2839932441711426\n"
+      "running time: 0.06999826431274414\n"
      ]
     }
    ],
    "source": [
     "st = time.time()\n",
     "# cnn = model.layers[0]\n",
-    "ep = extract_patches(X, sizes= [1]+cnn.kernel.shape[:2]+[1], strides=[1, strides, strides, 1], rates = [1,1,1,1], padding = 'VALID' )\n",
-    "kf = tf.reshape(cnn.kernel, [-1, 64])\n",
+    "ep = extract_patches(X, sizes= [1]+cnn.kernel.shape[:2]+[1], strides=[1, strides, strides, 1], rates = [1,1,1,1], padding = cnn.padding.upper() )\n",
+    "kf = tf.reshape(cnn.kernel, [-1, n_filters])\n",
     "\n",
     "result = tf.einsum('abci,id->abcd', ep, kf)\n",
     "\n",
@@ -638,18 +633,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(TensorShape([64, 127, 127, 63]),\n",
-       " TensorShape([63, 64]),\n",
-       " TensorShape([64, 127, 127, 64]))"
+       "(TensorShape([16, 127, 127, 45]),\n",
+       " TensorShape([45, 64]),\n",
+       " TensorShape([16, 127, 127, 64]))"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
@@ -669,184 +664,13 @@
        "True"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.alltrue(result == X_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "running time: 11.679848432540894\n"
-     ]
-    }
-   ],
-   "source": [
-    "st = time.time()\n",
-    "\n",
-    "model = Sequential()\n",
-    "model.add(Conv2DTranspose(n_filters, kernel_size, input_shape = image_size+(num_channels,), strides = strides, padding='valid' ) )\n",
-    "X_ = model(X)\n",
-    "\n",
-    "et = time.time()\n",
-    "print('running time:', et-st)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z = strides - 1\n",
-    "X_t = tf.zeros( (num_samples, image_size[0] + (image_size[0]-1)*z , image_size[1] + (image_size[1]-1)*z ,num_channels) )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "TensorShape([64, 256, 256, 7])"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_t[:, ::strides, ::strides, :].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "TensorShape([64, 256, 256, 7])"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "TensorShape([64, 511, 511, 7])"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_t.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "TensorShape([64, 513, 513, 64])"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential_8\"\n",
-      "_________________________________________________________________\n",
-      " Layer (type)                Output Shape              Param #   \n",
-      "=================================================================\n",
-      " conv2d_transpose (Conv2DTra  (None, 513, 513, 64)     4096      \n",
-      " nspose)                                                         \n",
-      "                                                                 \n",
-      "=================================================================\n",
-      "Total params: 4,096\n",
-      "Trainable params: 4,096\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
-    "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cnn_t = model.layers[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "TensorShape([3, 3, 64, 7])"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cnn_t.kernel.shape"
    ]
   },
   {
