--- a/neural_network/CNN.ipynb
+++ b/neural_network/CNN.ipynb
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,14 +424,14 @@
     "image_size = (256, 256)\n",
     "num_channels = 5\n",
     "\n",
-    "kernel_size = (3, 3)\n",
+    "kernel_size = (5, 5)\n",
     "strides = 2\n",
     "n_filters = 64"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
        "TensorShape([16, 256, 256, 5])"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 372,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,14 +470,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 764,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strides = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 765,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time: 0.06431174278259277\n"
+      "running time: 0.04082131385803223\n"
      ]
     }
    ],
@@ -485,7 +494,7 @@
     "st = time.time()\n",
     "\n",
     "model = Sequential()\n",
-    "model.add(Conv2D(n_filters, kernel_size, input_shape = image_size+(num_channels,), strides = strides, padding='valid', ) )\n",
+    "model.add(Conv2D(n_filters, kernel_size, input_shape = image_size+(num_channels,), strides = strides, padding='same', ) )\n",
     "X_ = model(X)\n",
     "\n",
     "et = time.time()\n",
@@ -494,22 +503,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 766,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_22\"\n",
+      "Model: \"sequential_57\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_9 (Conv2D)           (None, 127, 127, 64)      2944      \n",
+      " conv2d_10 (Conv2D)          (None, 86, 86, 64)        8064      \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 2,944\n",
-      "Trainable params: 2,944\n",
+      "Total params: 8,064\n",
+      "Trainable params: 8,064\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -521,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 768,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,16 +539,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 769,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TensorShape([3, 3, 5, 64])"
+       "TensorShape([5, 5, 5, 64])"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 769,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,14 +559,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 770,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# of params: 2944\n"
+      "# of params: 8064\n"
      ]
     },
     {
@@ -566,7 +575,7 @@
        "True"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 770,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,23 +587,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 771,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape of feature map: (127, 127)\n"
+      "shape of feature map: (86, 86)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 771,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,15 +616,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### implement 1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 772,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running time: 0.06999826431274414\n"
+      "running time: 0.06569194793701172\n"
      ]
     }
    ],
@@ -633,18 +649,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 773,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(TensorShape([16, 127, 127, 45]),\n",
-       " TensorShape([45, 64]),\n",
-       " TensorShape([16, 127, 127, 64]))"
+       "(TensorShape([16, 86, 86, 125]),\n",
+       " TensorShape([125, 64]),\n",
+       " TensorShape([16, 86, 86, 64]))"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 773,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 780,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +680,80 @@
        "True"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 780,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.alltrue(result == X_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### implement 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 782,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "running time: 0.06233692169189453\n"
+     ]
+    }
+   ],
+   "source": [
+    "st = time.time()\n",
+    "# cnn = model.layers[0]\n",
+    "ep = extract_patches(X, sizes= [1]+cnn.kernel.shape[:2]+[1], strides=[1, strides, strides, 1], rates = [1,1,1,1], padding = cnn.padding.upper() )\n",
+    "ep_shape = ep.shape\n",
+    "ep_ = tf.reshape(ep, list(ep_shape[:3]) + list(kernel_size) + [-1])\n",
+    "\n",
+    "result = tf.einsum('abcijk,ijkd->abcd', ep_, cnn.kernel)\n",
+    "\n",
+    "et = time.time()\n",
+    "print('running time:', et-st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 783,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([16, 86, 86, 125])"
+      ]
+     },
+     "execution_count": 783,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ep.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 784,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 784,
      "metadata": {},
      "output_type": "execute_result"
     }
