feat: Add implementation of transposed convolution layer

--- a/neural_network/CNN.ipynb
+++ b/neural_network/CNN.ipynb
@@ -766,6 +766,335 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Transpose Convolution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[**reference**](https://towardsdatascience.com/what-is-transposed-convolutional-layer-40e5e6e31c11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([16, 256, 256, 3])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 835,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strides = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 842,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "running time: 1.2655184268951416\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_init(shape, dtype=None):\n",
+    "    return tf.round(tf.random.uniform(shape, -10, 10, dtype=dtype))\n",
+    "\n",
+    "\n",
+    "st = time.time()\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(Conv2DTranspose(n_filters, kernel_size, input_shape = image_size+(num_channels,), strides = strides, padding='same', kernel_initializer = my_init ) )\n",
+    "X1 = model(X)\n",
+    "\n",
+    "et = time.time()\n",
+    "print('running time:', et-st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 837,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([16, 256, 256, 64])"
+      ]
+     },
+     "execution_count": 837,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 796,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strides = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 797,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "running time: 1.5569891929626465\n"
+     ]
+    }
+   ],
+   "source": [
+    "seed = 11\n",
+    "tf.random.set_seed(seed)\n",
+    "\n",
+    "st = time.time()\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(Conv2DTranspose(n_filters, kernel_size, input_shape = image_size+(num_channels,), strides = strides, padding='valid', kernel_initializer = \n",
+    "                          tf.keras.initializers.GlorotNormal(seed=1) ) )\n",
+    "X1 = model(X)\n",
+    "\n",
+    "et = time.time()\n",
+    "print('running time:', et-st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 686,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([16, 260, 260, 64])"
+      ]
+     },
+     "execution_count": 686,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 838,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_60\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d_transpose_49 (Conv2D  (None, 256, 256, 64)     8064      \n",
+      " Transpose)                                                      \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 8,064\n",
+      "Trainable params: 8,064\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 843,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(16, 256, 256, 5)\n",
+      "running time: 0.5162489414215088\n"
+     ]
+    }
+   ],
+   "source": [
+    "st = time.time()\n",
+    "\n",
+    "\n",
+    "cnn_t = model.layers[0]\n",
+    "\n",
+    "z = strides - 1\n",
+    "pad = 0 if cnn_t.padding == 'valid' else kernel_size[0] - strides\n",
+    "X_t = tf.zeros( (num_samples, image_size[0] + (image_size[0]-1)*z  , image_size[1] + (image_size[1]-1)*z , num_channels),  dtype = tf.float32)\n",
+    "X_t = tf.Variable(X_t, dtype = tf.float32)\n",
+    "X_t = X_t[:, ::strides, ::strides, :].assign( (X),)\n",
+    "X_t = tf.cast(X_t, tf.float32)\n",
+    "\n",
+    "pad_ = kernel_size[0] - 1 if cnn_t.padding == 'valid' else kernel_size[0] - pad - 1\n",
+    "\n",
+    "if pad_%2==0:\n",
+    "    X_t = ZeroPadding2D(padding = (pad_, pad_), dtype = tf.float32)(X_t)\n",
+    "else:\n",
+    "    X_t = ZeroPadding2D(padding = ((pad_//2 + 1, pad_//2), (pad_//2 + 1, pad_//2)), dtype = tf.float32)(X_t)\n",
+    "    \n",
+    "print(X_t.shape)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "ep = extract_patches(X_t, sizes= [1]+cnn_t.kernel.shape[:2]+[1], strides=[1, 1, 1, 1], rates = [1,1,1,1], padding = cnn_t.padding.upper() )\n",
+    "ep_shape = ep.shape\n",
+    "ep_ = tf.reshape(ep, list(ep_shape[:3]) + list(kernel_size) + [-1])\n",
+    "\n",
+    "kf = tf.reverse(cnn_t.kernel, [0,1] , )\n",
+    "\n",
+    "result = tf.einsum('abcijk,ijdk->abcd', ep_, kf,)\n",
+    "\n",
+    "\n",
+    "\n",
+    "et = time.time()\n",
+    "print('running time:', et-st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 806,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([5, 5, 5, 64])"
+      ]
+     },
+     "execution_count": 806,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kf.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 799,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([16, 260, 260, 64])"
+      ]
+     },
+     "execution_count": 799,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 800,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([16, 260, 260, 64])"
+      ]
+     },
+     "execution_count": 800,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 845,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ True]), array([67108864], dtype=int64))"
+      ]
+     },
+     "execution_count": 845,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(np.isclose(result, X1,) , return_counts=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 846,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 846,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.alltrue(result == X1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Depthwise Convolution"
    ]
   },
